--- a/ClusterKit.Core/ClusterKit.Build/ClusterKit.Build.csproj
+++ b/ClusterKit.Core/ClusterKit.Build/ClusterKit.Build.csproj
@@ -40,12 +40,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\FAKE\tools\FSharp.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Serilog">
-      <HintPath>..\..\packages\Serilog.1.5.14\lib\net45\Serilog.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Serilog.FullNetFx">
-      <HintPath>..\..\packages\Serilog.1.5.14\lib\net45\Serilog.FullNetFx.dll</HintPath>
+    <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Serilog.2.0.0-beta-541\lib\net45\Serilog.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
