--- a/ClusterKit.Core/ClusterKit.Core.Rest/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core.Rest/packages.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Akka" version="1.0.8.185-beta" targetFramework="net45" />
-  <package id="Akka.Cluster" version="1.0.8.185-beta" targetFramework="net45" />
-  <package id="Akka.Cluster.Sharding" version="1.0.8.185-beta" targetFramework="net45" />
-  <package id="Akka.Cluster.Tools" version="1.0.8.185-beta" targetFramework="net45" />
-  <package id="Akka.Persistence" version="1.0.8.185-beta" targetFramework="net45" />
-  <package id="Akka.Remote" version="1.0.8.185-beta" targetFramework="net45" />
-  <package id="Akka.Serialization.Wire" version="1.0.8.183-beta" targetFramework="net45" />
+  <package id="Akka" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.Cluster" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.Cluster.Sharding" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.Cluster.Tools" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.Persistence" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.Remote" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.Serialization.Wire" version="1.0.9.198-beta" targetFramework="net45" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net45" />
-  <package id="Helios" version="1.4.2" targetFramework="net45" />
-  <package id="JetBrains.Annotations" version="10.1.2-eap" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
+  <package id="Helios" version="2.0.1" targetFramework="net45" />
+  <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
