--- a/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/packages.config
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/packages.config
@@ -5,7 +5,7 @@
   <package id="knockoutjs" version="3.4.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net46" />
-  <package id="Microsoft.Net.Compilers" version="1.2.0-beta1-20160202-02" targetFramework="net45" developmentDependency="true" />
-  <package id="Serilog" version="1.5.14" targetFramework="net45" />
+  <package id="Microsoft.Net.Compilers" version="1.2.1" targetFramework="net45" developmentDependency="true" />
+  <package id="Serilog" version="2.0.0-beta-541" targetFramework="net45" />
   <package id="underscore.js" version="1.8.3" targetFramework="net45" />
 </packages>
