--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/App.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/App.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
   <!--  <configSections>-->
   <!--    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />-->
   <!--    ~1~ For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 @1@-->
@@ -22,7 +21,6 @@
   <!--      <add name="Npgsql Data Provider" invariant="Npgsql" support="FF" description=".Net Framework Data Provider for Postgresql Server" type="Npgsql.NpgsqlFactory, Npgsql" />-->
   <!--    </DbProviderFactories>-->
   <!--  </system.data>-->
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -62,4 +60,12 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <entityFramework>
+    <providers>
+      <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql" />
+    </providers>
+  </entityFramework>
 </configuration>
