--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Akka" version="1.0.8.183-beta" targetFramework="net45" />
-  <package id="Akka.Cluster" version="1.0.8.183-beta" targetFramework="net45" />
-  <package id="Akka.Cluster.Tools" version="1.0.8.183-beta" targetFramework="net45" />
-  <package id="Akka.DI.CastleWindsor" version="1.0.8.183-beta" targetFramework="net45" />
-  <package id="Akka.DI.Core" version="1.0.8.183-beta" targetFramework="net45" />
-  <package id="Akka.DI.TestKit" version="1.0.8.183-beta" targetFramework="net45" />
-  <package id="Akka.Logger.Serilog" version="1.0.7.154-beta" targetFramework="net45" />
-  <package id="Akka.Remote" version="1.0.8.183-beta" targetFramework="net45" />
-  <package id="Akka.Serialization.Wire" version="1.0.8.183-beta" targetFramework="net45" />
-  <package id="Akka.TestKit" version="1.0.8.183-beta" targetFramework="net45" />
-  <package id="Akka.TestKit.Xunit2" version="1.0.8.183-beta" targetFramework="net45" />
+  <package id="Akka" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.Cluster" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.Cluster.Tools" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.DI.CastleWindsor" version="1.0.8.191-beta" targetFramework="net45" />
+  <package id="Akka.DI.Core" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.DI.TestKit" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.Logger.Serilog" version="1.0.8.7-beta" targetFramework="net45" />
+  <package id="Akka.Remote" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.Serialization.Wire" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.TestKit" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.TestKit.Xunit2" version="1.0.9.198-beta" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="ClusterKit.Core" version="0.0.0.0-local" targetFramework="net45" />
@@ -24,10 +24,10 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
-  <package id="EntityFramework6.Npgsql" version="3.0.5" targetFramework="net46" />
+  <package id="EntityFramework6.Npgsql" version="3.0.7" targetFramework="net45" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
-  <package id="Helios" version="1.4.2" targetFramework="net46" />
-  <package id="JetBrains.Annotations" version="10.1.2-eap" targetFramework="net46" />
+  <package id="Helios" version="2.0.1" targetFramework="net45" />
+  <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
@@ -40,11 +40,11 @@
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net46" />
-  <package id="Npgsql" version="3.0.5" targetFramework="net46" />
-  <package id="NuGet.Core" version="2.10.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
+  <package id="Npgsql" version="3.0.7" targetFramework="net45" />
+  <package id="NuGet.Core" version="2.11.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
-  <package id="Serilog" version="1.5.14" targetFramework="net46" />
+  <package id="Serilog" version="2.0.0-beta-541" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net46" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net46" />
