--- a/ClusterKit.Web/ClusterKit.Web.Descriptor/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web.Descriptor/packages.config
@@ -7,11 +7,12 @@
   <package id="Akka.DI.Core" version="1.0.9.198-beta" targetFramework="net45" />
   <package id="Akka.Logger.Serilog" version="1.0.8.7-beta" targetFramework="net45" />
   <package id="Akka.Remote" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.Serialization.Wire" version="1.0.9.198-beta" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="ClusterKit.Core" version="0.0.0.0-local" targetFramework="net45" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
-  <package id="Helios" version="2.0.1" targetFramework="net45" />
+  <package id="Helios" version="1.4.1" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
@@ -25,4 +26,5 @@
   <package id="System.Runtime" version="4.0.0" targetFramework="net46" />
   <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net46" />
   <package id="System.Threading" version="4.0.0" targetFramework="net46" />
+  <package id="Wire" version="0.0.6" targetFramework="net45" />
 </packages>
