--- a/ClusterKit.Monitoring/ClusterKit.Monitoring.Tests/packages.config
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring.Tests/packages.config
@@ -17,7 +17,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
-  <package id="Helios" version="2.0.1" targetFramework="net45" />
+  <package id="Helios" version="1.4.1" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
@@ -26,6 +26,7 @@
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Serilog" version="2.0.0-beta-541" targetFramework="net45" />
+  <package id="Serilog.Sinks.TextWriter" version="2.0.0-beta-700" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
