--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
@@ -26,7 +26,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="EntityFramework6.Npgsql" version="3.0.7" targetFramework="net45" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
-  <package id="Helios" version="2.0.1" targetFramework="net45" />
+  <package id="Helios" version="1.4.1" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
@@ -45,6 +45,7 @@
   <package id="NuGet.Core" version="2.11.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Serilog" version="2.0.0-beta-541" targetFramework="net45" />
+  <package id="Serilog.Sinks.TextWriter" version="2.0.0-beta-700" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net46" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net46" />
