--- a/ClusterKit.Web/ClusterKit.Web.Tests/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/packages.config
@@ -8,6 +8,7 @@
   <package id="Akka.DI.TestKit" version="1.0.9.198-beta" targetFramework="net45" />
   <package id="Akka.Logger.Serilog" version="1.0.8.7-beta" targetFramework="net45" />
   <package id="Akka.Remote" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.Serialization.Wire" version="1.0.9.198-beta" targetFramework="net45" />
   <package id="Akka.TestKit" version="1.0.9.198-beta" targetFramework="net45" />
   <package id="Akka.TestKit.Xunit2" version="1.0.9.198-beta" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
@@ -17,7 +18,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
-  <package id="Helios" version="2.0.1" targetFramework="net45" />
+  <package id="Helios" version="1.4.1" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
@@ -26,6 +27,7 @@
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Serilog" version="2.0.0-beta-541" targetFramework="net45" />
+  <package id="Serilog.Sinks.TextWriter" version="2.0.0-beta-700" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
@@ -35,6 +37,7 @@
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net45" />
   <package id="System.Threading" version="4.0.0" targetFramework="net45" />
+  <package id="Wire" version="0.0.6" targetFramework="net45" />
   <package id="xunit" version="2.2.0-beta1-build3239" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
   <package id="xunit.assert" version="2.2.0-beta1-build3239" targetFramework="net45" />
