--- a/ClusterKit.Web/ClusterKit.Web/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web/packages.config
@@ -7,12 +7,13 @@
   <package id="Akka.DI.Core" version="1.0.9.198-beta" targetFramework="net45" />
   <package id="Akka.Logger.Serilog" version="1.0.8.7-beta" targetFramework="net45" />
   <package id="Akka.Remote" version="1.0.9.198-beta" targetFramework="net45" />
+  <package id="Akka.Serialization.Wire" version="1.0.9.198-beta" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="ClusterKit.Core" version="0.0.0.0-local" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
-  <package id="Helios" version="2.0.1" targetFramework="net45" />
+  <package id="Helios" version="1.4.1" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
@@ -37,4 +38,5 @@
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net45" />
   <package id="System.Threading" version="4.0.0" targetFramework="net45" />
+  <package id="Wire" version="0.0.6" targetFramework="net45" />
 </packages>
