--- a/Docker/ClusterKitMonitoring/web/app.json
+++ b/Docker/ClusterKitMonitoring/web/app.json
@@ -1,19 +1,12 @@
 {
-  "name": "react-redux-universal-hot-example",
-  "description": "Example of an isomorphic (universal) webapp using react redux and hot reloading",
-  "repository": "https://github.com/erikras/react-redux-universal-hot-example",
+  "name": "ClusterKit.Monitoring",
+  "description": "UI to the bundle of utils to create scalable and redundant services",
+  "repository": "https://github.com/kantora/ClusterKit",
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
   "keywords": [
     "react",
-    "isomorphic",
-    "universal",
-    "webpack",
-    "express",
-    "hot reloading",
-    "react-hot-reloader",
     "redux",
-    "starter",
-    "boilerplate",
-    "babel"
+    "clusterkit",
+    "monitoring"
   ]
 }
