--- a/nuget.config
+++ b/nuget.config
@@ -4,7 +4,7 @@
     <add key="repositorypath" value="./packages/" />
   </config>
   <packageSources>
-    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
     <add key="local" value="./packageOut" />
     <add key="Akka" value="https://www.myget.org/F/akkadotnet/api/v2" />
 
