Build script refactoring

--- a/ClusterKit.Core/ClusterKit.Build/ClusterKit.Build.csproj
+++ b/ClusterKit.Core/ClusterKit.Build/ClusterKit.Build.csproj
@@ -64,6 +64,11 @@
     <None Include="ClusterKit.Build.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ClusterKit.Build.fsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
