--- a/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
@@ -189,38 +189,46 @@
       <HintPath>..\..\packages\Wire.0.0.6\lib\Wire.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
-      <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
-      <Name>ClusterKit.Core</Name>
-</ProjectReference>
-    <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core.EF/ClusterKit.Core.EF.csproj">
-      <Project>{17C1FC2C-F8E3-4D0C-9446-5FA6E4F4D71F}</Project>
-      <Name>ClusterKit.Core.EF</Name>
-</ProjectReference>
-    <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core.Data/ClusterKit.Core.Data.csproj">
-      <Project>{0D6871D1-5A69-4533-BA4B-073B876232C5}</Project>
-      <Name>ClusterKit.Core.Data</Name>
-</ProjectReference>
-    <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core.Rest/ClusterKit.Core.Rest.csproj">
-      <Project>{FDA59712-9625-4CDF-B8FD-6DF19960C8C0}</Project>
-      <Name>ClusterKit.Core.Rest</Name>
-</ProjectReference>
-    <ProjectReference Include="../.././ClusterKit.Web/ClusterKit.Web.Client/ClusterKit.Web.Client.csproj">
-      <Project>{8E543EA4-65DE-475F-8045-C094CDE58E29}</Project>
-      <Name>ClusterKit.Web.Client</Name>
-</ProjectReference>
-    <ProjectReference Include="../.././ClusterKit.Web/ClusterKit.Web.Descriptor/ClusterKit.Web.Descriptor.csproj">
-      <Project>{39CA45B9-B12C-48C6-B2F6-1355F151BDCC}</Project>
-      <Name>ClusterKit.Web.Descriptor</Name>
-</ProjectReference>
-    <ProjectReference Include="../.././ClusterKit.Web/ClusterKit.Web/ClusterKit.Web.csproj">
-      <Project>{477B201A-A30C-4360-B56A-6F61C049BB04}</Project>
-      <Name>ClusterKit.Web</Name>
-</ProjectReference>
-    <ProjectReference Include="../.././ClusterKit.Web/ClusterKit.Web.CRUDS/ClusterKit.Web.CRUDS.csproj">
-      <Project>{9D6ED24B-FEC7-48CE-9BD2-51CA4434DA6F}</Project>
-      <Name>ClusterKit.Web.CRUDS</Name>
-</ProjectReference>
+    <Reference Include="ClusterKit.Core, Version=0.0.0, Culture=neutral, processorArchitecture=MSIL">
+     <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\ClusterKit.Core.0.0.0-local\lib\ClusterKit.Core.dll</HintPath>
+      <Private>True</Private>
+</Reference>
+    <Reference Include="ClusterKit.Core.EF, Version=0.0.0, Culture=neutral, processorArchitecture=MSIL">
+     <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\ClusterKit.Core.EF.0.0.0-local\lib\ClusterKit.Core.EF.dll</HintPath>
+      <Private>True</Private>
+</Reference>
+    <Reference Include="ClusterKit.Core.Data, Version=0.0.0, Culture=neutral, processorArchitecture=MSIL">
+     <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\ClusterKit.Core.Data.0.0.0-local\lib\ClusterKit.Core.Data.dll</HintPath>
+      <Private>True</Private>
+</Reference>
+    <Reference Include="ClusterKit.Core.Rest, Version=0.0.0, Culture=neutral, processorArchitecture=MSIL">
+     <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\ClusterKit.Core.Rest.0.0.0-local\lib\ClusterKit.Core.Rest.dll</HintPath>
+      <Private>True</Private>
+</Reference>
+    <Reference Include="ClusterKit.Web.Client, Version=0.0.0, Culture=neutral, processorArchitecture=MSIL">
+     <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\ClusterKit.Web.Client.0.0.0-local\lib\ClusterKit.Web.Client.dll</HintPath>
+      <Private>True</Private>
+</Reference>
+    <Reference Include="ClusterKit.Web.Descriptor, Version=0.0.0, Culture=neutral, processorArchitecture=MSIL">
+     <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\ClusterKit.Web.Descriptor.0.0.0-local\lib\ClusterKit.Web.Descriptor.dll</HintPath>
+      <Private>True</Private>
+</Reference>
+    <Reference Include="ClusterKit.Web, Version=0.0.0, Culture=neutral, processorArchitecture=MSIL">
+     <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\ClusterKit.Web.0.0.0-local\lib\ClusterKit.Web.dll</HintPath>
+      <Private>True</Private>
+</Reference>
+    <Reference Include="ClusterKit.Web.CRUDS, Version=0.0.0, Culture=neutral, processorArchitecture=MSIL">
+     <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\ClusterKit.Web.CRUDS.0.0.0-local\lib\ClusterKit.Web.CRUDS.dll</HintPath>
+      <Private>True</Private>
+</Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.Designer.cs">
