--- a/ClusterKit.Core/ClusterKit.Core.EF.Npgsql/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core.EF.Npgsql/packages.config
@@ -22,7 +22,7 @@
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Npgsql" version="3.0.7" targetFramework="net45" />
-  <package id="Serilog" version="2.0.0-beta-541" targetFramework="net45" />
+  <package id="Serilog" version="2.0.0" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
