--- a/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
+++ b/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
@@ -117,7 +117,7 @@
     </Reference>
     <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Serilog.2.0.0-beta-541\lib\net45\Serilog.dll</HintPath>
+      <HintPath>..\..\packages\Serilog.2.0.0\lib\net45\Serilog.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
