--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
@@ -44,8 +44,8 @@
   <package id="Npgsql" version="3.0.7" targetFramework="net45" />
   <package id="NuGet.Core" version="2.11.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
-  <package id="Serilog" version="2.0.0-beta-541" targetFramework="net45" />
-  <package id="Serilog.Sinks.TextWriter" version="2.0.0-beta-700" targetFramework="net45" />
+  <package id="Serilog" version="2.0.0" targetFramework="net45" />
+  <package id="Serilog.Sinks.TextWriter" version="2.0.0" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net46" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net46" />
