--- a/ClusterKit.Web/ClusterKit.Web.Swagger/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web.Swagger/packages.config
@@ -28,7 +28,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
-  <package id="Serilog" version="2.0.0-beta-541" targetFramework="net45" />
+  <package id="Serilog" version="2.0.0" targetFramework="net45" />
   <package id="Swashbuckle.Core.Net45" version="5.2.1" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
