--- a/ClusterKit.Web/ClusterKit.Web.Tests/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/packages.config
@@ -26,8 +26,8 @@
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
-  <package id="Serilog" version="2.0.0-beta-541" targetFramework="net45" />
-  <package id="Serilog.Sinks.TextWriter" version="2.0.0-beta-700" targetFramework="net45" />
+  <package id="Serilog" version="2.0.0" targetFramework="net45" />
+  <package id="Serilog.Sinks.TextWriter" version="2.0.0" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
