--- a/ClusterKit.Core/ClusterKit.Build/packages.config
+++ b/ClusterKit.Core/ClusterKit.Build/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FAKE" version="4.27.0" targetFramework="net45" />
+  <package id="FAKE" version="4.30.0" targetFramework="net45" />
+  <package id="FSharp.Core" version="4.0.0.1" targetFramework="net45" />
   <package id="Serilog" version="2.0.0" targetFramework="net45" />
 </packages>
